Added  open-source Github link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>World Clock</h1>
-    <footer>This project is coded by Shirley Khaindi and is <a href="#" target="_blank">open-sourced on GIthub</footer>
+    <footer>This project is coded by Shirley Khaindi and is <a href="https://github.com/HAINDI/world-clock" target="_blank">open-sourced on GIthub</footer>
         <script src="Javascript/script.js"></script>
 </body>
 </html>
