--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>World clock-Shirley khaindi</title>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select>
+        <option value="">Select a city </option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+        <option value="">London</option>
+    </select>
+    <div class="city">
+<h2>Los Angeles</h2>
+<div class="date"> August 22nd, 2025</div>
+<div class="time"> 1:48:15 AM</div>
+    </div>
+     <div class="city">
+<h2>Sydney</h2>
+<div class="date"> August 22nd, 2025</div>
+<div class="time"> 1:48:15 AM</div>
+    </div>
+     <div class="city">
+<h2>Tokyo</h2>
+<div class="date"> August 22nd, 2025</div>
+<div class="time"> 1:48:15 AM</div>
+    </div>
+     <div class="city">
+<h2>Paris</h2>
+<div class="date"> August 22nd, 2025</div>
+<div class="time"> 1:48:15 AM</div>
+    </div>
+    </div>  
     <footer>This project is coded by Shirley Khaindi and is <a href="https://github.com/HAINDI/world-clock" target="_blank">open-sourced on GIthub</footer>
         <script src="Javascript/script.js"></script>
 </body>
