Added CSS styling

--- a/index.html
+++ b/index.html
@@ -16,27 +16,35 @@
         <option value="">London</option>
     </select>
     <div class="city">
+        <div>
 <h2>Los Angeles</h2>
 <div class="date"> August 22nd, 2025</div>
-<div class="time"> 1:48:15 AM</div>
+        </div>
+<div class="time"> 1:48:15 <small>AM</small></div>
     </div>
      <div class="city">
+        <div>
 <h2>Sydney</h2>
 <div class="date"> August 22nd, 2025</div>
-<div class="time"> 1:48:15 AM</div>
+</div>
+<div class="time"> 1:48:15 <small>AM</small></div>
     </div>
      <div class="city">
+        <div>
 <h2>Tokyo</h2>
 <div class="date"> August 22nd, 2025</div>
-<div class="time"> 1:48:15 AM</div>
+        </div>
+<div class="time"> 1:48:15 <small>AM</small></div>
     </div>
      <div class="city">
+        <div>
 <h2>Paris</h2>
 <div class="date"> August 22nd, 2025</div>
-<div class="time"> 1:48:15 AM</div>
+        </div>
+<div class="time"> 1:48:15 <small>AM</small></div>
     </div>
     </div>  
-    <footer>This project is coded by Shirley Khaindi and is <a href="https://github.com/HAINDI/world-clock" target="_blank">open-sourced on GIthub</footer>
+    <footer>This project is coded by<strong>Shirley Khaindi </strong>and is <a href="https://github.com/HAINDI/world-clock" target="_blank">open-sourced on GIthub</footer>
         <script src="Javascript/script.js"></script>
 </body>
 </html>
